minor plot changes

--- a/la crime data analysis.ipynb
+++ b/la crime data analysis.ipynb
@@ -271,7 +271,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2939f0c6490>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x255ca932940>"
       ]
      },
      "execution_count": 5,
@@ -316,7 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2939d6de520>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x255c8ceb430>"
       ]
      },
      "execution_count": 7,
@@ -380,7 +380,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2939d43e0d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x255c9f12160>"
       ]
      },
      "execution_count": 9,
